# cosmos3-mlx

./: .epistaxis-session.json  .gitignore  README.md  img2video.py  pyproject.toml  requirements.txt  txt2video.py
archives/reviews/anaphorai/: cosmos3-mlx-boundary-audit-b1b2b3_2026-06-14.md  cosmos3-mlx-boundary-audit-b4b5_2026-06-14.md  cosmos3-mlx-boundary-audit-b6b7_2026-06-14.md  cosmos3-mlx-phase2-generation-pipeline-aposkepsis_2026-06-14.md
archives/reviews/probolai/: cosmos3-mlx-generation-boundary-audit_2026-06-14.md  cosmos3-mlx-phase1-post-fix-aposkepsis_2026-06-14.md  cosmos3-mlx-phase1-scaffold-aposkepsis_2026-06-14.md  cosmos3-mlx-phase2-diffusion-components-aposkepsis_2026-06-14.md  (+1 more)
cosmos3_mlx/: __init__.py  __main__.py  attention.py  audio.py  conv3d.py  convert.py  decode_audio.py  decode_vae.py  encode_vae.py  generate.py  load.py  model.py  pipeline.py  rope.py  scheduler.py  timestep.py  vae.py  vision.py
evidence/i2v-quality-investigation-0617/: README.md  cosmos3_i2v_xfmr_256_256.npz  cosmos3_vel_256_256.npz
scripts/: bisect_denoising.py  debug_encoder_perlayer.py  head_to_head_i2v.py  smoke_audio.py  smoke_i2v.py  smoke_i2v_480p_evil_orb.py  smoke_i2v_720p.py  smoke_i2v_reference.py  smoke_i2v_visual.py  smoke_quantized.py  verify_chunked_encoder_5f.py  verify_chunked_encoder_small.py
tests/: test_attention.py  test_audio.py  test_conv3d.py  test_convert.py  test_diffusion.py  test_load.py  test_load_audit.py  test_model.py  test_pipeline.py  test_rope.py  test_vae.py  test_vision.py
